// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": <React.Fragment>
            <img
              alt="github"
              className="spacer-right"
              src="/images/sonarcloud/github.svg"
              width={16}
            />
            Github Enterprise
          </React.Fragment>,
        },
        Object {
          "key": "bitbucket",
          "label": <React.Fragment>
            <img
              alt="bitbucket"
              className="spacer-right"
              src="/images/sonarcloud/bitbucket.svg"
              width={16}
            />
            Bitbucket Server
          </React.Fragment>,
        },
        Object {
          "key": "azure",
          "label": <React.Fragment>
            <img
              alt="azure"
              className="spacer-right"
              src="/images/sonarcloud/azure.svg"
              width={16}
            />
            Azure DevOps Server
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={true}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": <React.Fragment>
            <img
              alt="github"
              className="spacer-right"
              src="/images/sonarcloud/github.svg"
              width={16}
            />
            Github Enterprise
          </React.Fragment>,
        },
        Object {
          "key": "bitbucket",
          "label": <React.Fragment>
            <img
              alt="bitbucket"
              className="spacer-right"
              src="/images/sonarcloud/bitbucket.svg"
              width={16}
            />
            Bitbucket Server
          </React.Fragment>,
        },
        Object {
          "key": "azure",
          "label": <React.Fragment>
            <img
              alt="azure"
              className="spacer-right"
              src="/images/sonarcloud/azure.svg"
              width={16}
            />
            Azure DevOps Server
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
  <DeleteModal
    id="keyToDelete"
    onCancel={[MockFunction]}
    onDelete={[MockFunction]}
  />
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="azure"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": <React.Fragment>
            <img
              alt="github"
              className="spacer-right"
              src="/images/sonarcloud/github.svg"
              width={16}
            />
            Github Enterprise
          </React.Fragment>,
        },
        Object {
          "key": "bitbucket",
          "label": <React.Fragment>
            <img
              alt="bitbucket"
              className="spacer-right"
              src="/images/sonarcloud/bitbucket.svg"
              width={16}
            />
            Bitbucket Server
          </React.Fragment>,
        },
        Object {
          "key": "azure",
          "label": <React.Fragment>
            <img
              alt="azure"
              className="spacer-right"
              src="/images/sonarcloud/azure.svg"
              width={16}
            />
            Azure DevOps Server
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <AzureTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 4`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": <React.Fragment>
            <img
              alt="github"
              className="spacer-right"
              src="/images/sonarcloud/github.svg"
              width={16}
            />
            Github Enterprise
          </React.Fragment>,
        },
        Object {
          "key": "bitbucket",
          "label": <React.Fragment>
            <img
              alt="bitbucket"
              className="spacer-right"
              src="/images/sonarcloud/bitbucket.svg"
              width={16}
            />
            Bitbucket Server
          </React.Fragment>,
        },
        Object {
          "key": "azure",
          "label": <React.Fragment>
            <img
              alt="azure"
              className="spacer-right"
              src="/images/sonarcloud/azure.svg"
              width={16}
            />
            Azure DevOps Server
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;
